[gd_scene load_steps=2 format=3 uid="uid://cgqs31q80h62k"]

[ext_resource type="Script" path="res://Main/Menu/Main/main_menu.gd" id="1_lgy0y"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lgy0y")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 870.0
offset_top = 402.0
offset_right = -870.0
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="Address" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter IP"
alignment = 1

[node name="DebugMode" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Debug Mode"

[node name="ErrorLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 0, 0, 1)
layout_mode = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/VBoxContainer/Address" to="." method="_on_address_text_submitted"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/DebugMode" to="." method="_on_debug_mode_toggled"]
